--- a/css/style.css
+++ b/css/style.css
@@ -100,9 +100,26 @@ section {
 #logo {
 	margin: 0 auto;
 	padding-bottom: 1em;
-	max-width: 20%;
+	width: 20%;
 	height: auto;
-	border-bottom: 0.3em solid #405c6c;
+	animation-name: logo_spin;
+	animation-duration: 4s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+}
+
+@keyframes logo_spin {
+	50% {
+		transform: rotateY(180deg);
+	}
+}
+
+#separator {
+	margin: 0 auto 2em auto;
+	width: 20%;
+	height: 0.1em;
+	background-color: #405c6c;
+	color: #405c6c;
 }
 
 article {
