--- a/css/style.css
+++ b/css/style.css
@@ -22,44 +22,26 @@ body {
 	margin: 0 auto;
 }
 
-header {
-	padding: 1em 0 2em 0;
-	height: 100%;
-	text-align: center;
-	background-image: url(../img/beach-header.jpg);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	color: white;
-	transition: 0.2s;
-}
-
-header h1 {
-	font-family: 'Lobster', sans-serif;
-	font-size: 3em;
-	text-shadow: 0 0 0.2em #647478;
-}
-
-header p {
-	font-family: 'Indie Flower', cursive;
-	color: black;
-	background-color: rgba(255, 255, 255, 0.7);
-}
-
 #summary_flex {
-	margin: 1em auto;
+	margin: 0 auto;
 	display: flex;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
 	padding: 0 0.5em;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-between;
 	align-content: stretch;
-	background-color: #afb9bc;
+	background-color: #b6cbd6;
 }
 
 #summary {
 	font-family: 'Quicksand', sans-serif;
 	top: -0.7em;
 	font-size: 1.5em;
+	cursor: pointer;
 }
 
 #sum_menu {
@@ -84,8 +66,34 @@ header p {
 }
 
 #sum_menu a:hover {
-	border-bottom: 0.5em solid #c6a974;
+	position: relative;
+	border-bottom: 0.5em solid #2e68a3;
 	color: #eaeeef;
+	top: -1em;
+}
+
+header {
+	margin-top: 4em;
+	padding: 1em 0 2em 0;
+	height: 12em;
+	text-align: center;
+	background-image: url(../img/header-img.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	color: white;
+	transition: 0.2s;
+}
+
+header h1 {
+	font-family: 'Lobster', sans-serif;
+	font-size: 3em;
+	text-shadow: 0 0 0.2em #647478;
+}
+
+header p {
+	font-family: 'Indie Flower', cursive;
+	color: black;
+	background-color: rgba(255, 255, 255, 0.7);
 }
 
 main {
@@ -93,8 +101,8 @@ main {
 }
 
 section {
-	margin: 4em auto 2em auto;
-	width: 75%;
+	margin: 2em auto;
+	width: 80%;
 	padding: 1em;
 	border-top: 0.8em double #405c6c;
 	border-bottom: 0.8em double #405c6c;
@@ -104,18 +112,12 @@ section {
 #logo {
 	margin: 0 auto;
 	padding-bottom: 1em;
-	width: 20%;
+	width: 15%;
 	height: auto;
 	animation-name: logo_spin;
 	animation-duration: 4s;
 	animation-timing-function: linear;
 	animation-iteration-count: infinite;
-}
-
-@keyframes logo_spin {
-	50% {
-		transform: rotateY(180deg);
-	}
 }
 
 #separator {
@@ -128,10 +130,9 @@ section {
 
 .articles {
 	margin: 1em;
-	/* padding: 1em 0; */
 	font-family: "Quicksand", sans-serif;
 	border: 1px solid #405c6c;
-	border-radius: 40px;
+	border-radius: 20px;
 	background-color: #e6eaed;
 	text-align: left;
 }
@@ -139,7 +140,7 @@ section {
 .articles h2 {
 	margin-left: 1em;
 	color: #eefafc;
-	text-shadow: 0 0 0.2em #647478;
+	text-shadow: 0 0 0.2em #192f5d;
 }
 
 .articles h3 {
@@ -157,7 +158,7 @@ section {
 .articles .content {
 	margin-right: 5%;
 	overflow: hidden;
-	max-height: 3.3em;
+	max-height: 4.3em;
 	border-right: 1px solid #785e37;
 }
 
@@ -191,7 +192,7 @@ section {
 }
 
 .more:hover {
-	background-color: #c6a974;
+	background-color: #e3ccb9;
 	color: White;
 }
 
@@ -215,6 +216,7 @@ footer {
 
 @media only screen and (max-width: 640px) {
 	header {
+		margin-top: 6em;
 		height: 10em;
 		font-size: 0.6em;
 	}
